Fixed: letter-spacing in creator-studio page subheading

--- a/themes/inbeat/assets/scss/pages/_creatorstudio.scss
+++ b/themes/inbeat/assets/scss/pages/_creatorstudio.scss
@@ -13,6 +13,7 @@
                 font-weight: 400;
                 font-size: 1.125rem;
                 line-height: 1.175rem;
+                letter-spacing: 0.03em;
             } 
         }
         @include breakpoint(sm) {
